# Version 0.39

## New Features

- Add support for multiple media player backends; Implement FFPlay Backend -- kaneryu on 2025-09-16



# Version 0.38

## New Features

- Add Albums. Currently available in search. -- kaneryu on 2025-09-16



# Version 0.37

## New Features

- implement debounce logic for Next and Prev song controls -- kaneryu on 2025-09-07

## Bugfixes

- fix bug where notifying log model wouldn't add logs based on error level, and disable song fetching if we're offline -- kaneryu on 2025-09-08
- bug where incorrect offline check led to infinite recursion -- kaneryu on 2025-09-09
- decrease offline mode timeout check for faster offline startup -- kaneryu on 2025-09-09
- make various bugfixes so the app now compiles again -- kaneryu on 2025-09-13
- add error catching for search, and add hot reload plugin for development -- kaneryu on 2025-09-14



# Version 0.36

## New Features

- add dynamic color based on current song cover -- kaneryu on 2025-09-07

## Bugfixes

- Emit endReached signal immediately on song finish instead of using QTimer -- kaneryu on 2025-09-07



# Version 0.35

## New Features

- intergrate with winsmtc play, pause, next and prev buttons -- kaneryu on 2025-09-01

## Bugfixes

- Move default settings out of code, and make sure that the active settings file updates itself to the default setting's file schema -- kaneryu on 2025-09-03
- Update path constants to use uppercase naming convention and add online status management in NetworkManager -- kaneryu on 2025-09-04
- Fix bug where orphaned items would never actually be deleted in intergrity check -- kaneryu on 2025-09-04



# Version 0.34

## New Features

- implement dataStore integrity restoration in integrityCheck method -- kaneryu on 2025-08-23

## Bugfixes

- update search function to allow None as a filter, add copilot Instructions -- kaneryu on 2025-08-24
- add ratelimit to discord presence -- kaneryu on 2025-08-24