@@ -3,3 +3,7 @@
 ## New Features
 
 - Add support for multiple media player backends; Implement FFPlay Backend -- kaneryu on 2025-09-16
+
+## Bugfixes
+
+- Allow album type to include singles in _set_info validation -- kaneryu on 2025-09-16
