@@ -1,5 +1,5 @@
 [project]
-version = "0.39.0"
+version = "0.39.1"
 name = "Clarity"
 requires-python = ">=3.12"
 readme = "README.md"
