@@ -1,1 +1,1 @@
-0.39.0
+0.39.1
