@@ -4,6 +4,10 @@
 
 - Add support for multiple media player backends; Implement FFPlay Backend -- kaneryu on 2025-09-16
 
+## Bugfixes
+
+- Allow album type to include singles in _set_info validation -- kaneryu on 2025-09-16
+
 
 
 # Version 0.38
